// Database structure exported from the configured PostgreSQL database.
// Compatible with https://dbdiagram.io

Table "User" {
  id integer [pk, increment, not null]
  email text [not null, unique]
  name text
}

Table "Post" {
  id integer [pk, increment, not null]
  title text [not null]
  content text
  published boolean [default: false]
  authorId integer
}

Table works {
  id integer [pk, increment, not null]
  source varchar(20) [not null]
  source_id varchar(50) [not null]
  title text [not null]
  original_title text
  type varchar(20) [not null]
  cover_url text
  creator text
  year varchar(10)
  external_rating real
  episodes integer
  synopsis text
  created_at timestamptz [default: `now()`]
  genres text [note: 'JSON-encoded string array']
  cast_members text [note: 'JSON-encoded cast member array']

  indexes {
    (source, source_id) [unique, name: 'works_source_source_id_key']
  }
}

Table reviews {
  id integer [pk, increment, not null]
  work_id integer [not null]
  status varchar(20) [not null, default: 'completed']
  my_rating real
  comment text
  watched_at text
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]
}

Table showcase {
  id smallint [pk, not null, default: 1, note: 'Singleton row; must equal 1']
  title text [not null]
  updated_at timestamptz [not null, default: `now()`]
}

Table showcase_slots {
  id integer [pk, increment, not null]
  showcase_id smallint [not null, default: 1]
  label text [not null]
  work_id integer
  position integer [not null]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (showcase_id, position) [unique, name: 'showcase_slots_position_unique']
  }
}

Table _prisma_migrations {
  id varchar(36) [pk, not null]
  checksum varchar(64) [not null]
  finished_at timestamptz
  migration_name varchar(255) [not null]
  logs text
  rolled_back_at timestamptz
  started_at timestamptz [not null, default: `now()`]
  applied_steps_count integer [not null, default: 0]
}

Ref: "Post".authorId > "User".id [delete: set null, update: cascade]
Ref: reviews.work_id > works.id [delete: cascade]
Ref: showcase_slots.showcase_id > showcase.id [delete: cascade]
Ref: showcase_slots.work_id > works.id [delete: set null]
